--- a/firstplaybook.yml
+++ b/firstplaybook.yml
@@ -10,3 +10,7 @@
     apt:
       name: wget
       state: present
+  - name: i want to install webserver apache2
+    apt:
+      name: apache2
+      state: present
